--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ pilot_post_survey: "put the URL of your post-workshop survey here"
 #------------------------------------------------------------
 
 # What kind of thing is this ("workshop" or "lesson")?
-kind: "lesson"
+kind: "workshop"
 
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
